# peelie-avatar-api

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
.github/: git-commit-instructions.md
.github/workflows/: docker-image.yml
apps/avatar/: models.py  repository.py  schemas.py  service.py
apps/benchmark/: __init__.py  router.py  schemas.py  service.py
apps/chat/: router.py  schemas.py  service.py
apps/embedding/: models.py
apps/worker/: worker.py
appserver/apps/user/: models.py
core/: config.py  db.py  embeddings.py
tests/: test_avatar_service.py  test_benchmark_router.py  test_benchmark_service.py  test_chat_router.py  test_chat_service.py  test_embeddings.py
